Fix .days being too small

--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,7 @@ ul {
     padding: 10px 0;
     background: #eee;
     margin: 0;
-    height: 9em;
+    height: 9.5em;
 }
 
 .days li {
